--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
+    <h1>Welcome to LHOK</h1>
     <button onclick="showMessage()">Click Me</button>
     <script src="script.js"></script>
 </body>
