--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 /* Header section styling */
 header {
-    background-color:#b54dbc; /* Sets background color of header (replace with your own hex code) */
+    background-color:linear-gradient(to bottom, #b54dbc 0%, #ffffff 80%); /* Sets background color of header (replace with your own hex code) */
     color: white; /* Sets text color to white for contrast */
     padding: 20px 0; /* Adds top and bottom padding to the header */
     width: 100%; /* Makes the header span full page width */
