--- a/style.css
+++ b/style.css
@@ -228,8 +228,8 @@ button {
 }
 
 .footer-logo img {
-    height: 60px;
-    width: auto;
+    height: 135px;
+    width: 180px;
     filter: brightness(0.8);
     transition: filter 0.3s ease;
 }
@@ -268,7 +268,8 @@ button {
     }
     
     .footer-logo img {
-        height: 60px;
+        height: 135px;
+        width: 180px;
     }
     
     .footer-bottom {
