testing new header
angie duplicating the footer file and replacing all the footers with header

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,7 @@
 
 @import url('components/style.css'); 
 
-@import url('components/headers.css');
+@import url('components/footer\ copy.css');
 
 @import url('components/footer.css');
 
