--- a/CSS/components/footer copy.css
+++ b/CSS/components/footer copy.css
@@ -2,7 +2,7 @@
 .header {
     background: -webkit-linear-gradient(to top, #ffffff 100%, #b54dbc 1%);
     background: -moz-linear-gradient(to top, #ffffff 100%, #b54dbc 1%);
-    background: linear-gradient(to top, #ffffff 100%, #b54dbc 1%;
+    background: linear-gradient(to top, #ffffff 100%, #b54dbc 1%);
     color: #333 !important;
     width: 100vw;
     position: fixed !important;
