--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,8 +1,10 @@
 
 @import url('components/style.css'); 
 
-@import url('components/footer\ copy.css');
+@import url('components/header.css');
 
 @import url('components/footer.css');
 
 @import url('components/buttons.css');
+
+@import url('components/variables.css');
