testing the italics
jen and ang seeing if the italics are relevant to the text

--- a/CSS/components/style.css
+++ b/CSS/components/style.css
@@ -44,7 +44,12 @@ body {
 
 
 /* Main h1 heading styling */
-
+h1 {
+    color: #333; /* Sets the text color to a dark gray */
+    font-size: 4em; /* Sets the font size for the h1 heading */
+    text-align: center; /* Centers the text */
+    font-style: italic;
+}
 
 /* Subheading (h2) styling */
 h2 {
