Subheading Changed to regular text
Jen and angie changinf h2 to regular text

--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -7,7 +7,7 @@ h1 {
     text-align: center; /* Centers the text */
 
 }
-/* Subheading (h2) styling */
+/* Subheading (regular) styling */
 h2 {
     color: #666; /* Sets text color to a lighter gray */
     font-size: 1.5em; /* Sets the font size for h2 */
