--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -9,7 +9,9 @@ h1 {
 }
 /* Subheading (regular) styling */
 h2 {
+    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
     color: #666; /* Sets text color to a lighter gray */
     font-size: 1.5em; /* Sets the font size for h2 */
     text-align: center; /* Centers the text */
+    font-style: italic;
 }
