--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,7 +3,7 @@
 
 @import url('components/header.css');
 
-@import url('components/footer.css');
+@import url('components/footer\ copy.css');
 
 @import url('components/buttons.css');
 
